--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ nav li {
   display: inline;
   padding: 10px;
   margin: 10px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Noto Serif', serif;
 }
 
 footer {
@@ -53,7 +53,7 @@ footer {
   color: white;
   text-align: center;
   font-size: 1.2em;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Noto Serif', serif;
   flex-shrink: 0;
   margin-top: 20px;
 }
@@ -87,13 +87,24 @@ footer img {
 
 .conteiner p {
   font-size: 1.1em;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Noto Serif', serif;
 }
 
 h1 {
   text-align: center;
   font-size: 3em;
+  font-family: 'Courgette', cursive;
 }
+
+
+  h2 {
+    font-family: 'Courgette', cursive;
+
+    }
+
+    .bold { 
+      font-style: bold;
+    }
 
 img {
   width: 100%;
@@ -110,22 +121,23 @@ img {
   text-decoration: underline;
 }
 
-.bold {
-  font-style: italic;
-}
 
 button {
   border-radius: 15px;
+  border: 2px solid #000;
   padding: 10px 30px;
   margin: 50px;
   margin-top: 300px;
-  background-color: #f79c3b;
+  background-color: #f69c3c;
   font-size: 1.5em;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
+  font-family: 'Bree Serif', serif;}
 
 button a {
   color: black;
+}
+
+button:hover { 
+  background-color: #f5ae63;
 }
 
 @media (min-width: 600px) {
